--- a/LLewis_AI_PromptEngineer.ipynb
+++ b/LLewis_AI_PromptEngineer.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOfWdpXIUjoig79PixqdSPH",
+      "authorship_tag": "ABX9TyMx+Q4q2hvJBLLzLv6evRhI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "\n",
         "  'type': 'insufficient_quota', 'param': None, 'code': 'insufficient_quota'}}\n",
         "  client = OpenAI(\n",
-        "      api_key = \"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\",\n",
+        "      api_key = \"\",\n",
         "  )\n",
         "\n",
         "  chat_completion = client.chat.completions.create(\n",
